# sentence-bert-nayami-search

./: LICENSE.txt  README.md  pyproject.toml
data/nayami/: shizuoka_nayami_subclass.csv
src/: train.py
